--- a/Database/app/src/main/res/layout/activity_login.xml
+++ b/Database/app/src/main/res/layout/activity_login.xml
@@ -28,7 +28,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/edit_text"
-        android:drawableLeft="@drawable/uname"/>
+        android:drawableLeft="@drawable/uname"
+        android:drawablePadding="10dp"/>
 
     <EditText
         android:id="@+id/editText_Pass"
@@ -50,7 +51,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/edit_text"
-        android:drawableLeft="@drawable/pass"/>
+        android:drawableLeft="@drawable/pass"
+        android:drawablePadding="10dp"/>
 
     <Button
         android:id="@+id/button_Sign_In"
