--- a/Database/app/src/main/res/layout/activity_sign_up.xml
+++ b/Database/app/src/main/res/layout/activity_sign_up.xml
@@ -27,7 +27,8 @@
         android:background="@drawable/edit_text"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:drawableLeft="@drawable/uname"/>
+        android:drawableLeft="@drawable/uname"
+        android:drawablePadding="10dp" />
 
     <EditText
         android:id="@+id/editText_email"
@@ -49,7 +50,8 @@
         android:background="@drawable/edit_text"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:drawableLeft="@drawable/email"/>
+        android:drawableLeft="@drawable/email"
+        android:drawablePadding="10dp"/>
 
     <EditText
         android:id="@+id/editText_pass"
@@ -71,7 +73,8 @@
         android:background="@drawable/edit_text"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:drawableLeft="@drawable/pass"/>
+        android:drawableLeft="@drawable/pass"
+        android:drawablePadding="10dp"/>
 
     <EditText
         android:id="@+id/editText_con_pass"
@@ -93,7 +96,8 @@
         android:background="@drawable/edit_text"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:drawableLeft="@drawable/pass"/>
+        android:drawableLeft="@drawable/pass"
+        android:drawablePadding="10dp"/>
 
     <Button
         android:id="@+id/button_sign_up"
@@ -111,5 +115,5 @@
         app:layout_constraintVertical_bias="0.771"
         android:background="@drawable/login"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginEnd="8dp"/>
 </android.support.constraint.ConstraintLayout>
