--- a/Database/app/src/main/res/layout/activity_user.xml
+++ b/Database/app/src/main/res/layout/activity_user.xml
@@ -11,13 +11,19 @@
          space available using match_parent in both dimensions. -->
     <android.support.constraint.ConstraintLayout
         android:id="@+id/container"
-        android:layout_width="368dp"
+        android:layout_width="0dp"
         android:layout_height="495dp"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp">
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp">
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/imageButton_visitingCard"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/my_visiting_card"
@@ -35,7 +41,7 @@
             android:layout_marginEnd="8dp" />
 
         <ImageButton
-            android:id="@+id/imageButton7"
+            android:id="@+id/imageButton_favoriteDrug"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/favorite_drug"
@@ -53,7 +59,7 @@
             android:layout_marginEnd="8dp" />
 
         <ImageButton
-            android:id="@+id/imageButton8"
+            android:id="@+id/imageButton_news"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/medical_news"
@@ -70,7 +76,7 @@
             app:layout_constraintVertical_bias="0.498" />
 
         <ImageButton
-            android:id="@+id/imageButton9"
+            android:id="@+id/imageButton_addDrug"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/add_drug"
@@ -88,7 +94,7 @@
             android:layout_marginEnd="8dp" />
 
         <ImageButton
-            android:id="@+id/imageButton4"
+            android:id="@+id/imageButton_job"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/job"
@@ -106,7 +112,7 @@
             android:layout_marginEnd="8dp" />
 
         <ImageButton
-            android:id="@+id/imageButton5"
+            android:id="@+id/imageButton_prescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/mini_prescription"
@@ -123,7 +129,7 @@
             android:layout_marginEnd="8dp" />
 
         <ImageButton
-            android:id="@+id/imageButton6"
+            android:id="@+id/imageButton_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/search"
@@ -141,7 +147,7 @@
             android:layout_marginEnd="8dp" />
 
         <ImageButton
-            android:id="@+id/imageButton3"
+            android:id="@+id/imageButton_class"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/drug_by_class"
@@ -159,7 +165,7 @@
             android:layout_marginEnd="8dp" />
 
         <ImageButton
-            android:id="@+id/imageButton2"
+            android:id="@+id/imageButton_indication"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/drug_by_indicatoin"
