--- a/Database/app/src/main/res/layout/activity_job.xml
+++ b/Database/app/src/main/res/layout/activity_job.xml
@@ -6,10 +6,25 @@
     android:layout_height="match_parent"
     tools:context="com.example.shakkhor.database.Job">
 
+    <include
+        android:id="@+id/app_bar"
+        layout="@layout/app_bar">
+
+    </include>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Currently there is no job available. Please Check again later."
-        android:textSize="25dp"/>
+        android:textSize="25dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="-43dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintVertical_bias="0.122"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.235" />
 
 </android.support.constraint.ConstraintLayout>
