--- a/Database/app/src/main/res/layout/activity_medical__news.xml
+++ b/Database/app/src/main/res/layout/activity_medical__news.xml
@@ -6,4 +6,10 @@
     android:layout_height="match_parent"
     tools:context="com.example.shakkhor.database.Medical_News">
 
+    <include
+        android:id="@+id/app_bar"
+        layout="@layout/app_bar">
+
+    </include>
+
 </android.support.constraint.ConstraintLayout>
