--- a/Database/app/src/main/res/layout/activity_search.xml
+++ b/Database/app/src/main/res/layout/activity_search.xml
@@ -25,5 +25,7 @@
         android:id="@+id/list_drug"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/search_view"></ListView>
+        android:layout_below="@+id/search_view"
+        android:divider="@android:color/white"
+        android:dividerHeight="1dp"></ListView>
 </RelativeLayout>
