--- a/Database/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/Database/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -6,6 +6,83 @@
     tools:context="com.example.shakkhor.database.NavigationDrawerFragment">
 
     <!-- TODO: Update blank fragment layout -->
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/image" />
+
+        <ImageView
+            android:id="@+id/face_icon"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:src="@drawable/ic_tag_faces_white_48dp"
+            android:layout_marginTop="128dp"
+            android:layout_marginLeft="8dp"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Username"
+            android:textSize="18dp"
+            android:layout_marginTop="160dp"
+            android:layout_marginLeft="76dp"/>
+
+        <ListView
+            android:id="@+id/left_drawer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/image"
+            android:layout_gravity="start"
+            android:layout_marginLeft="50dp"
+            android:background="#235"
+            android:choiceMode="singleChoice"
+            android:divider="@android:color/white"
+            android:dividerHeight="1dp"
+            android:entries="@array/nav_array" />
+
+        <RelativeLayout
+            android:id="@+id/relative"
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/image"
+            android:background="#235">
+
+            <ImageView
+                android:id="@+id/profile"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/ic_person_black_18dp" />
+
+            <ImageView
+                android:id="@+id/share"
+                android:layout_below="@+id/profile"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/ic_share_black_18dp" />
+
+            <ImageView
+                android:id="@+id/rateus"
+                android:layout_below="@id/share"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/ic_star_rate_black_18dp" />
+
+            <ImageView
+                android:id="@+id/aboutus"
+                android:layout_below="@+id/rateus"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/ic_group_black_18dp" />
+        </RelativeLayout>
+
+
+    </RelativeLayout>
 
 </FrameLayout>
